[package]
name = "sp-sized-chunks"
version = "0.1.0"
edition = "2018"
authors = ["Samuel Burnham <sam@yatima.io>", "John Burnham <john@yatima.io>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yatima-inc/sp-sized-chunks"
documentation = "https://docs.rs/sp-sized-chunks"
description = "Fixed length array types for no_std` use within Substrate"
keywords = ["chunks", "no_std"]
categories = ["no-std"]
exclude = ["release.toml", "proptest-regressions/**"]
[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std = []
ringbuffer = ["array-ops"]

[dependencies]
bitmaps = { version = "3.2.0", default-features = false }
array-ops = { version = "0.1.0", optional = true }
refpool = { version = "0.4.3", optional = true }
arbitrary = { version = "1.0.2", optional = true }
